Added ControllerCategory.java Implements List Wallet, in wallet.js

--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -5,6 +5,9 @@
     background-size: cover; 
     background-position: top;
 }
+.roundedCorner{
+	border-radius: 100px !important;
+}
 
 /* EFFETTO ROTAZIONE IMG ON MOUSE */
 .hover-rotate {
