Added ControllerStatement.java, Implemented New Methods

--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -1,5 +1,5 @@
 .loginpage {
-    background-image: url('https://virtualcustoms.net/attachment.php?attachmentid=52695&d=1330551210'); 
+    background-image: url('https://www.terremarsicane.it/wp-content/uploads/2020/03/intelligenza-artificiale-2.jpg'); 
     height: 100vh; 
     margin: 0px; 
     background-size: cover; 
