--- a/src/main/resources/static/css/capitalewallet.css
+++ b/src/main/resources/static/css/capitalewallet.css
@@ -1,5 +1,5 @@
-.loginpage {
-    background-image: url('https://www.omgubuntu.co.uk/wp-content/uploads/2016/12/axNNqyH.jpg.png'); 
+.capitale {
+    background-image: url('https://carreromortgage.com/wp-content/uploads/2019/10/financial-trade.jpg'); 
     height: 100vh; 
     margin: 0px; 
     background-size: cover; 
