--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -1,5 +1,5 @@
-.loginpage {
-    background-image: url('https://www.terremarsicane.it/wp-content/uploads/2020/03/intelligenza-artificiale-2.jpg'); 
+.homepage {
+    background-image: url('https://besthqwallpapers.com/img/original/128534/finance-concepts-charts-background-with-graphs-stock-exchanges-money.jpg'); 
     height: 100vh; 
     margin: 0px; 
     background-size: cover; 
