--- a/src/main/resources/static/css/statement.css
+++ b/src/main/resources/static/css/statement.css
@@ -1,4 +1,4 @@
-.loginpage {
+.statement {
     background-image: url('https://blog.credimi.com/hubfs/111_copertina-pro-soluto-di-fine-anno-2-4.jpg'); 
     height: 100vh; 
     margin: 0px; 
