Added Delete features (Wallet)

--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -9,6 +9,10 @@
 	border-radius: 100px !important;
 }
 
+.space {
+  border-spacing: 0;
+}
+
 /* EFFETTO ROTAZIONE IMG ON MOUSE */
 .hover-rotate {
     overflow: hidden;
